<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/info_dialog_options_and_info"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_title"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoDialog_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_n_a"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_description"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoDialog_description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_n_a"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_url"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoDialog_url_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_n_a"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_category"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoDialog_category_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_n_a"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_from"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoDialog_origin_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_dialog_n_a"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="3" >

            <Button
                android:id="@+id/infoDialog_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_dialog_delete_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/infoDialog_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_dialog_share_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/infoDialog_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>