<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/browser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/web_back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/web_contentDescription_back_button"
            android:rotation="180"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/web_home_image_view"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@null"
            android:contentDescription="@string/web_contentDescription_home_button"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/web_forward_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/web_contentDescription_forward_button"
            android:src="@android:drawable/ic_media_play" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/web_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/web_go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@null"
            android:contentDescription="@string/web_contentDescription_go_button"
            android:src="@android:drawable/ic_menu_send" />
    </LinearLayout>

    <WebView
        android:id="@+id/wv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>